feat: resolve M33 task form versions
